crates/oxc_react_compiler/tests/snapshots/overlapping-scopes-interleaved-by-terminal.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/overlapping-scopes-interleaved-by-terminal.js
---
function foo(a, b, c) {
	const x = [];
	const y = [];
	if (x) {}
	y.push(a);
	x.push(b);
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
