crates/oxc_react_compiler/tests/snapshots/overlapping-scopes-interleaved.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/overlapping-scopes-interleaved.js
---
function foo(a, b) {
	const x = [];
	const y = [];
	x.push(a);
	y.push(b);
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
