crates/oxc_react_compiler/tests/snapshots/overlapping-scopes-shadowed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/overlapping-scopes-shadowed.js
---
function foo(a, b) {
	const x = [];
	const y = [];
	y.push(b);
	x.push(a);
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
