crates/oxc_react_compiler/tests/snapshots/overlapping-scopes-while.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/overlapping-scopes-while.js
---
function foo(a, b, c) {
	const x = [];
	const y = [];
	while (c) {
		y.push(b);
		x.push(a);
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
