crates/oxc_react_compiler/tests/snapshots/pattern1a_type_to_primitive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/pattern1a_type_to_primitive.js
---
// Pattern 1a: shapeId null→generated + return Type→Primitive
// Arrow function with forEach callback
// Divergence: TS has shapeId:null, return:Type(22); Rust has shapeId:"<generated_0>", return:Primitive
const getItemKeyMap = (): Map<string, string> => {
	const itemKeys = [];
	itemKeys.forEach(_temp);
};
function _temp(itemKey) {}
